@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.10.20-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-10-20 07:32:41, took 00:10:36, with 50 workers, on 617 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-10-20 08:02:53, took 00:13:31, with 50 workers, on 617 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
